--- a/OMDB Movie APP 1/index.html
+++ b/OMDB Movie APP 1/index.html
@@ -3,16 +3,20 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" href="style.css">
+    <link rel="stylesheet" href="./style.css">
     <title>Movie Search</title>
 </head>
 <body>
-    <div class="container">
-        <h1>Movie Search</h1>
-        <input type="text" id="searchInput" placeholder="Enter movie title">
-        <button onclick="searchMovie()">Search</button>
-        <div id="movieDetails"></div>
-    </div>
-    <script src="index.js"></script>
+
+    <input type="text" id="movieName">
+    <br>
+    <button id="searchbtn">Search</button>
+
+    <div id="movieDetails"></div>
+
+    <script src="./index.js">
+        
+    </script>
+
 </body>
 </html>
