--- a/OMDB Movie APP 1/index.html
+++ b/OMDB Movie APP 1/index.html
@@ -7,12 +7,13 @@
     <title>Movie Search</title>
 </head>
 <body>
-
+    <div>
     <input type="text" id="movieName">
-    <br>
     <button id="searchbtn">Search</button>
 
     <div id="movieDetails"></div>
+    </div>
+    
 
     <script src="./index.js">
         
